--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,9 +11,10 @@
         </div>
         <h6 class="mb-4 text-muted">Inicia sesión a tu cuenta</h6>
 
-        <form>
+        <form [formGroup]="LoginForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <input
+              formControlName="usuario"
               type="email"
               class="form-control"
               placeholder="Correo"
@@ -22,6 +23,7 @@
           </div>
           <div class="form-group">
             <input
+              formControlName="contrasena"
               type="password"
               class="form-control"
               placeholder="Contraseña"
@@ -31,6 +33,7 @@
           <div class="form-group text-left">
             <div class="custom-control custom-checkbox">
               <input
+                formControlName="recordarme"
                 type="checkbox"
                 name="remember"
                 class="custom-control-input"
@@ -41,7 +44,12 @@
               >
             </div>
           </div>
-          <button type="button" class="btn btn-primary shadow-2 mb-4">
+          <button
+            [disabled]="!LoginForm.valid"
+            id="LoginBtn"
+            type="submit"
+            class="btn btn-primary shadow-2 mb-4"
+          >
             Inicia sesión
           </button>
         </form>
