--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -11,9 +11,10 @@
         </div>
         <h6 class="mb-4 text-muted">Crea tu cuenta</h6>
 
-        <form>
+        <form [formGroup]="SignupForm">
           <div class="form-group">
             <input
+              formControlName="correo"
               type="email"
               class="form-control"
               placeholder="Correo"
@@ -22,6 +23,7 @@
           </div>
           <div class="form-group">
             <input
+              formControlName="contrasena"
               type="password"
               class="form-control"
               placeholder="contraseña"
@@ -30,15 +32,28 @@
           </div>
           <div class="form-group">
             <input
+              formControlName="confirmar"
               type="password"
               class="form-control"
               placeholder="Confirma contraseña"
               required
             />
           </div>
-          <button type="button" class="btn btn-primary shadow-2 mb-4">
+          <button
+            [disabled]="!SignupForm.valid"
+            id="SignupBtn"
+            type="button"
+            class="btn btn-primary shadow-2 mb-4"
+          >
             Registrar
           </button>
+
+          <div *ngIf="SignupError" class="alert alert-danger">
+            <h5 class="alert-title">
+              <i class="fas fa-exclamation-triangle"></i> Error
+            </h5>
+            {{ SignupMsg }}
+          </div>
         </form>
         <p class="mb-0 text-muted">
           ¿Ya tienes una cuenta? <a href="login">Iniciar sesión</a>
