--- a/src/app/pages/signup/steps/person-reg/person-reg.component.html
+++ b/src/app/pages/signup/steps/person-reg/person-reg.component.html
@@ -1,1 +1,75 @@
-<p>person-reg works!</p>
+<div class="wrapper">
+  <div class="auth-content">
+    <div class="card">
+      <div class="card-body text-center">
+        <div class="mb-4">
+          <img
+            class="brand"
+            src="assets/img/bootstraper-logo.png"
+            alt="bootstraper logo"
+          />
+        </div>
+        <h6 class="mb-4 text-muted">Complementa tus datos</h6>
+
+        <form [formGroup]="PersonaRegForm">
+          <div class="form-group">
+            <input
+              formControlName="usuario"
+              type="text"
+              class="form-control"
+              placeholder="Nombre de usuario *"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              formControlName="nombre"
+              type="text"
+              class="form-control"
+              placeholder="Nombre *"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <input
+              formControlName="apellidopa"
+              type="text"
+              class="form-control"
+              placeholder="Apellido Paterno *"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <input
+              formControlName="apellidoma"
+              type="text"
+              class="form-control"
+              placeholder="Apellido Materno *"
+              required
+            />
+          </div>
+          <button
+            [disabled]="!PersonaRegForm.valid"
+            id="SignupBtn"
+            type="button"
+            class="btn btn-primary shadow-2 mb-4"
+          >
+            Terminar registro
+          </button>
+
+          <div *ngIf="PersonaRegError" class="alert alert-danger">
+            <h5 class="alert-title">
+              <i class="fas fa-exclamation-triangle"></i> Error
+            </h5>
+            {{ PersonaRegMsg }}
+          </div>
+        </form>
+        <p class="mb-0 text-muted">
+          ¿Ya tienes una cuenta? <a href="login">Iniciar sesión</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
