--- a/src/app/modulos/estudiantes/estudiantes.component.html
+++ b/src/app/modulos/estudiantes/estudiantes.component.html
@@ -24,6 +24,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav navbar-nav ml-auto">
+
+          <li *ngIf="authS.UserClass.IsAdmin" class="nav-item dropdown">
+            <div class="nav-dropdown">
+              <a href="" class="nav-item nav-link dropdown-toggle text-secondary" data-toggle="dropdown"><i
+                  class="fas fa-link mr-2"></i> <span>Enlaces rápidos</span> <i style="font-size: .8em;" class="fas fa-caret-down"></i></a>
+              <div class="dropdown-menu dropdown-menu-right nav-link-menu">
+                <ul class="nav-list">
+                  <li *ngFor="let m of authS.UserClass.FormatedModules">
+                    <a [routerLink]="m.ruta" class="dropdown-item"><i [ngClass]="m.icono"></i> {{m.nombre}}
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+
           <li class="nav-item dropdown">
             <div class="nav-dropdown">
               <a
@@ -32,11 +48,7 @@
                 data-toggle="dropdown"
                 ><i class="fas fa-user mr-2"></i>
                 <span>{{
-                  authS.UserData.UserCopy.persona.nombre +
-                    " " +
-                    authS.UserData.UserCopy.persona.apellidoPaterno +
-                    " " +
-                    authS.UserData.UserCopy.persona.apellidoMaterno
+                  authS.UserClass.FormatedName
                 }}</span>
                 <i style="font-size: 0.8em" class="fas fa-caret-down"></i
               ></a>
@@ -47,16 +59,6 @@
                       ><i class="fas fa-address-card"></i> Perfil
                     </a>
                   </li>
-                  <!-- <li>
-                    <a href="" class="dropdown-item"
-                      ><i class="fas fa-envelope"></i> Messages</a
-                    >
-                  </li> -->
-                  <!-- <li>
-                    <a routerLink="settings" class="dropdown-item"
-                      ><i class="fas fa-cog"></i> Ajustes</a
-                    >
-                  </li> -->
                   <div class="dropdown-divider"></div>
                   <li>
                     <a
