--- a/src/app/modulos/estudiantes/pages/profile/profile.component.html
+++ b/src/app/modulos/estudiantes/pages/profile/profile.component.html
@@ -69,19 +69,18 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-10 offset-sm-2">
-                    <input type="submit" class="btn btn-primary" />
+                    <button type="submit" class="btn btn-primary">
+                      Guardar
+                    </button>
                   </div>
                 </div>
               </div>
               <div class="col-4">
                 <div>
                   <div class="text-center">
-                    <img
-                      src="https://avatars0.githubusercontent.com/u/20452841?s=460&u=90343a9ae6701f01709510c0fcc18425ae14933d&v=4"
-                      class="rounded-circle"
-                      alt="..."
-                      width="200"
-                    />
+                    <app-image-uploader-preview
+                      [preloadUserImg]="authS.UserData.UserCopy.persona.imagen"
+                    ></app-image-uploader-preview>
                   </div>
                 </div>
               </div>
