--- a/src/app/pages/error/err500/err500.component.html
+++ b/src/app/pages/error/err500/err500.component.html
@@ -6,7 +6,7 @@
         <p>¡Error de servidor interno!</p>
       </header>
       <p class="error-advise">Whoopps, parece que algo ha salido mal.</p>
-      <a class="btn btn-primary btn-round mb-5" href="login">Regresar</a>
+      <a class="btn btn-primary btn-round mb-5" routerLink="login">Regresar</a>
 
       <footer class="page-copyright">
         <p>© 2020. TODOS LOS DERECHOS REVERVADOS.</p>
