--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -63,10 +63,10 @@
         </form>
         <p class="mb-2 text-muted">
           ¿Olvidaste tu Contraseña?
-          <a href="forgot-password">Reestablece tu contraseña</a>
+          <a routerLink="/forgot-password">Reestablece tu contraseña</a>
         </p>
         <p class="mb-0 text-muted">
-          ¿Aún no tienes una cuenta? <a href="signup">Regístrate</a>
+          ¿Aún no tienes una cuenta? <a routerLink="/signup">Regístrate</a>
         </p>
       </div>
     </div>
