--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -56,7 +56,7 @@
           </div>
         </form>
         <p class="mb-0 text-muted">
-          ¿Ya tienes una cuenta? <a href="login">Iniciar sesión</a>
+          ¿Ya tienes una cuenta? <a routerLink="/login">Iniciar sesión</a>
         </p>
       </div>
     </div>
