--- a/src/app/pages/error/err404/err404.component.html
+++ b/src/app/pages/error/err404/err404.component.html
@@ -8,7 +8,7 @@
       <p class="error-advise">
         La página que intentas encontrar no está disponible.
       </p>
-      <a class="btn btn-primary btn-round mb-5" href="login">Regresar</a>
+      <a class="btn btn-primary btn-round mb-5" routerLink="login">Regresar</a>
 
       <footer class="page-copyright">
         <p>© 2020. TODOS LOS DERECHOS RESERVADOS.</p>
