--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <button class="btn btn-primary shadow-2 mb-4">Cambiar</button>
                 </form>
-                <p class="mb-0 text-muted">¿No tienes una cuenta? <a href="signup">Registrate</a></p>
+                <p class="mb-0 text-muted">¿No tienes una cuenta? <a routerLink="/signup">Registrate</a></p>
             </div>
         </div>
     </div>
