V1 Resideño del sitio
22-OCT-2020

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <router-outlet></router-outlet>
+<ngx-spinner bdColor="rgba(31, 31, 31, 0.5)" size="medium" color="#fff" type="ball-spin-clockwise" [fullScreen]="true">
+    <p class="pt-4" style="color: #fff; font-size: 16px;"> CARGANDO... </p>
+</ngx-spinner>
