--- a/src/app/pages/error/err404/err404.component.html
+++ b/src/app/pages/error/err404/err404.component.html
@@ -1,16 +1,16 @@
-<div class="wrapper">
+<div class="wrapper bg-dark">
   <div class="page vertical-align text-center">
-    <div class="page-content vertical-align-middle">
+    <div class="page-content vertical-align-middle animated fadeIn">
       <header>
-        <h1 class="animation-slide-top">404</h1>
-        <p>¡Página no encontrada!</p>
+        <h1 class="animation-slide-top text-white">404</h1>
+        <p class="text-white">¡Página no encontrada!</p>
       </header>
-      <p class="error-advise">
+      <p class="error-advise text-white">
         La página que intentas encontrar no está disponible.
       </p>
-      <a class="btn btn-primary btn-round mb-5" routerLink="login">Regresar</a>
+      <a class="btn bg-blue text-white btn-round mb-5 p-3 w-75" routerLink="login">Regresar</a>
 
-      <footer class="page-copyright">
+      <footer class="page-copyright text-white">
         <p>© 2020. TODOS LOS DERECHOS RESERVADOS.</p>
       </footer>
     </div>
