--- a/src/app/pages/error/err500/err500.component.html
+++ b/src/app/pages/error/err500/err500.component.html
@@ -1,16 +1,19 @@
-<div class="wrapper">
+<div class="wrapper bg-dark">
   <div class="page vertical-align text-center">
-    <div class="page-content vertical-align-middle">
+    <div class="page-content vertical-align-middle animated fadeIn">
       <header>
-        <h1 class="animation-slide-top">500</h1>
-        <p>¡Error de servidor interno!</p>
+        <h1 class="animation-slide-top text-white">500</h1>
+        <p class="text-white">¡Error de servidor interno!</p>
       </header>
-      <p class="error-advise">Whoopps, parece que algo ha salido mal.</p>
-      <a class="btn btn-primary btn-round mb-5" routerLink="login">Regresar</a>
+      <p class="error-advise text-white">
+        Whoopps, parece que algo ha salido mal.
+      </p>
+      <a class="btn bg-blue text-white btn-round mb-5 p-3 w-75" routerLink="login">Regresar</a>
 
-      <footer class="page-copyright">
-        <p>© 2020. TODOS LOS DERECHOS REVERVADOS.</p>
+      <footer class="page-copyright text-white">
+        <p>© 2020. TODOS LOS DERECHOS RESERVADOS.</p>
       </footer>
     </div>
   </div>
 </div>
+
