--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,15 +1,15 @@
 <div class="wrapper">
   <div class="auth-content">
-    <div class="card">
+    <div class="card animated fadeIn">
       <div class="card-body text-center">
         <div class="mb-4">
           <img
-            class="brand"
-            src="assets/img/bootstraper-logo.png"
+            class="brand animated infinite pulse"
+            src="assets/img/logo.png"
             alt="bootstraper logo"
           />
         </div>
-        <h6 class="mb-4 text-muted">Crea tu cuenta</h6>
+        <h5 class="mb-4 text-muted">Crea tu cuenta</h5>
 
         <form [formGroup]="SignupForm">
           <div class="form-group">
@@ -26,7 +26,7 @@
               formControlName="contrasena"
               type="password"
               class="form-control"
-              placeholder="contraseña"
+              placeholder="Contraseña"
               required
             />
           </div>
@@ -35,7 +35,7 @@
               formControlName="confirmar"
               type="password"
               class="form-control"
-              placeholder="Confirma contraseña"
+              placeholder="Confirmar contraseña"
               required
             />
           </div>
@@ -43,7 +43,7 @@
             [disabled]="!SignupForm.valid"
             id="SignupBtn"
             type="button"
-            class="btn btn-primary shadow-2 mb-4"
+            class="btn w-75 bg-blue text-white shadow-2 mt-4 mb-4"
           >
             Registrar
           </button>
@@ -56,7 +56,7 @@
           </div>
         </form>
         <p class="mb-0 text-muted">
-          ¿Ya tienes una cuenta? <a routerLink="/login">Iniciar sesión</a>
+          ¿Ya tienes una cuenta? <a class="color-blue" routerLink="/login">Iniciar sesión</a>
         </p>
       </div>
     </div>
