--- a/src/app/shared/unity/unity.component.html
+++ b/src/app/shared/unity/unity.component.html
@@ -1,8 +1,9 @@
 <div class="webgl-content">
-  <div id="unityContainer" style="width: 960px; height: 600px"></div>
+  <div id="unityContainer"></div>
   <div class="footer">
     <div class="webgl-logo"></div>
     <div class="fullscreen" (click)="unityInstance.SetFullscreen(1)"></div>
     <div class="title">Matilde Desktop</div>
   </div>
 </div>
+
