--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,19 +1,22 @@
 <div class="wrapper">
     <div class="auth-content">
-        <div class="card">
+        <div class="card animated fadeIn">
             <div class="card-body text-center">
                 <div class="mb-4">
-                    <img class="brand" src="assets/img/bootstraper-logo.png" alt="bootstraper logo">
-                </div>
-                <h6 class="mb-4 text-muted">Cambiar Contraseña</h6>
+                    <img
+                    class="brand animated infinite pulse"
+                    src="assets/img/logo.png"
+                    alt="bootstraper logo"
+                  />                </div>
+                <h5 class="mb-1 text-muted">Cambiar Contraseña</h5>
 
                 <form action="" method="">
                     <div class="form-group">
                         <input type="email" class="form-control" placeholder="Ingresa tu correo" required>
                     </div>
-                    <button class="btn btn-primary shadow-2 mb-4">Cambiar</button>
+                    <button class="btn w-75 bg-blue text-white shadow-2 mt-4 mb-4">Cambiar</button>
                 </form>
-                <p class="mb-0 text-muted">¿No tienes una cuenta? <a routerLink="/signup">Registrate</a></p>
+                <p class="mb-0 text-muted">¿No tienes una cuenta? <a class="color-blue" routerLink="/signup">Registrate</a></p>
             </div>
         </div>
     </div>
