se cambió la url de producción

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -40,9 +40,9 @@
                 value="false"
                 id="remember-me"
               />
-              <label class="custom-control-label" for="remember-me"
+              <!-- <label class="custom-control-label" for="remember-me"
                 >Recordarme</label
-              >
+              > -->
             </div>
           </div>
           <button
