--- a/src/app/modulos/estudiantes/pages/profile/profile.component.html
+++ b/src/app/modulos/estudiantes/pages/profile/profile.component.html
@@ -8,62 +8,38 @@
         <div class="card-header">Información personal</div>
         <div class="card-body">
           <h5 class="card-title"></h5>
-          <form [formGroup]="ProfileForm" accept-charset="utf-8">
+          <form [formGroup]="ProfileForm" (ngSubmit)="Update()" accept-charset="utf-8">
             <div class="row">
               <div class="col-12 col-sm-12 col-md-7 col-lg-6">
                 <div class="form-group row">
                   <label class="col-sm-2" for="nombre">Nombre</label>
                   <div class="col-sm-10">
-                    <input
-                      type="text"
-                      name="nombre"
-                      placeholder=""
-                      class="form-control"
-                      formControlName="nombre"
-                      [value]="UserProfile.persona.nombre"
-                    />
+                    <input type="text" name="nombre" placeholder="" class="form-control" formControlName="nombre"
+                      [value]="UserProfile.persona.nombre" />
                     <small class="form-text"></small>
                   </div>
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-2" for="email">Apellido paterno</label>
                   <div class="col-sm-10">
-                    <input
-                      type="email"
-                      name="email"
-                      placeholder=""
-                      class="form-control"
-                      formControlName="apellidoPaterno"
-                      [value]="UserProfile.persona.apellidoPaterno"
-                    />
+                    <input type="email" name="email" placeholder="" class="form-control"
+                      formControlName="apellidoPaterno" [value]="UserProfile.persona.apellidoPaterno" />
                     <small class="form-text"></small>
                   </div>
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-2" for="email">Apellido materno</label>
                   <div class="col-sm-10">
-                    <input
-                      type="email"
-                      name="email"
-                      placeholder=""
-                      class="form-control"
-                      formControlName="apellidoMaterno"
-                      [value]="UserProfile.persona.apellidoMaterno"
-                    />
+                    <input type="email" name="email" placeholder="" class="form-control"
+                      formControlName="apellidoMaterno" [value]="UserProfile.persona.apellidoMaterno" />
                     <small class="form-text"></small>
                   </div>
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-2" for="email">Correo</label>
                   <div class="col-sm-10">
-                    <input
-                      type="email"
-                      name="email"
-                      placeholder=""
-                      class="form-control"
-                      formControlName="correo"
-                      [value]="UserProfile.correo"
-                    />
+                    <input type="email" name="email" placeholder="" class="form-control" formControlName="correo"
+                      [value]="UserProfile.correo" />
                     <small class="form-text"></small>
                   </div>
                 </div>
@@ -71,16 +47,15 @@
               <div class="col">
                 <div>
                   <div class="text-center">
-                    <app-image-uploader-preview
-                      [preloadUserImg]="authS.UserData.UserCopy.persona.imagen"
-                    ></app-image-uploader-preview>
+                    <app-image-uploader-preview [preloadUserImg]="authS.UserData.UserCopy.persona.imagen">
+                    </app-image-uploader-preview>
                   </div>
                 </div>
               </div>
             </div>
             <div class="form-group row justify-content-center">
               <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-                <button type="submit" class="btn bg-blue text-white w-100 m-auto d-block">
+                <button id="BtnSave" type="submit" class="btn bg-blue text-white w-100 m-auto d-block">
                   Guardar
                 </button>
               </div>
