✨Se ha agregado una pantalla de carga a la aplicación de Unity

--- a/src/app/shared/unity/unity.component.html
+++ b/src/app/shared/unity/unity.component.html
@@ -1,3 +1,13 @@
+<div id="msg" class="mt-5 text-center">
+  <span class="text-white">Estamos cargando la aplicación espere un momento, porfavor</span>
+</div>
+
+<div id="progress-bar-container" class="stat-levels">
+  <div class="stat-1 stat-bar">
+    <span id="progress-bar" class="stat-bar-rating" role="stat-bar" style="width: 0%;"></span>
+  </div>
+</div>
+
 <div class="webgl-content">
   <div id="unityContainer"></div>
   <div class="footer">
