--- a/src/app/modulos/estudiantes/pages/profile/profile.component.html
+++ b/src/app/modulos/estudiantes/pages/profile/profile.component.html
@@ -47,7 +47,7 @@
               <div class="col">
                 <div>
                   <div class="text-center">
-                    <app-image-uploader-preview [preloadUserImg]="authS.UserData.UserCopy.persona.imagen">
+                    <app-image-uploader-preview [url]="'/persona/update/photo'" [preloadUserImg]="authS.UserData.UserCopy.persona.imagen">
                     </app-image-uploader-preview>
                   </div>
                 </div>
@@ -55,7 +55,7 @@
             </div>
             <div class="form-group row justify-content-center">
               <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-                <button id="BtnSave" type="submit" class="btn bg-blue text-white w-100 m-auto d-block">
+                <button [disabled]="ProfileForm.pristine" id="BtnSave" type="submit" class="btn bg-blue text-white w-100 m-auto d-block">
                   Guardar
                 </button>
               </div>
