--- a/src/app/shared/image-uploader-preview/image-uploader-preview.component.html
+++ b/src/app/shared/image-uploader-preview/image-uploader-preview.component.html
@@ -19,10 +19,10 @@
   <h5>Confirmar cambio</h5>
   <div class="row">
     <div class="col-6">
-      <button class="btn">Aceptar</button>
+      <button type="button" (click)="Upload()" class="btn">Aceptar</button>
     </div>
     <div class="col-6">
-      <button class="btn">Cancelar</button>
+      <button type="button" class="btn">Cancelar</button>
     </div>
   </div>
 </div>
