--- a/src/app/modulos/estudiantes/pages/profile/profile.component.html
+++ b/src/app/modulos/estudiantes/pages/profile/profile.component.html
@@ -47,7 +47,7 @@
               <div class="col">
                 <div>
                   <div class="text-center">
-                    <app-image-uploader-preview [url]="'/persona/update/photo'" [preloadUserImg]="authS.UserData.UserCopy.persona.imagen">
+                    <app-image-uploader-preview (urlEvent)="getProfileImgUrl($event)" [url]="'/persona/update/photo'" [preloadUserImg]="authS.UserData.UserCopy.persona.imagen">
                     </app-image-uploader-preview>
                   </div>
                 </div>
