--- a/src/app/pages/signup/steps/person-reg/person-reg.component.html
+++ b/src/app/pages/signup/steps/person-reg/person-reg.component.html
@@ -50,6 +50,34 @@
               required
             />
           </div>
+          <div class="form-group">
+            <label for="nacimiento">Fecha de nacimiento</label>
+            <input formControlName="fechaNacim" type="date" id="nacimiento" class="form-control" placeholder="Fecha nacimiento *" required />
+          </div>
+          <div class="form-group text-left">
+            <label for="genero">
+              Seleccione su género:
+            </label>
+            <div id="genero" class="form-check">
+              <input formControlName="genero" type="radio" class="form-check-input" id="radio-masculino" value="true" placeholder="Hombre *" required />
+              <label class="form-check-label" for="radio-masculino">
+                Hombre
+              </label>
+            </div>
+            <div class="form-check">
+              <input formControlName="genero" type="radio" class="form-check-input" id="radio-femenino" value="false" placeholder="Mujer *" required />
+              <label class="form-check-label" for="radio-femenino">
+                Mujer
+              </label>
+            </div>
+            <div class="form-check">
+              <input formControlName="genero" type="radio" class="form-check-input" id="radio-no-escoger" value="null"
+                placeholder="" required />
+              <label class="form-check-label" for="radio-no-escoger">
+                Prefiero no escoger
+              </label>
+            </div>
+          </div>
           <button
             [disabled]="!PersonaRegForm.valid"
             id="SignupBtn"
