Busqueda e infinite scroller de institutos

--- a/src/app/modulos/estudiantes/estudiantes.component.scss
+++ b/src/app/modulos/estudiantes/estudiantes.component.scss
@@ -20,8 +20,8 @@
     border-right:none !important;
     // border-right: 1px solid #e6ecf5;
 }
-.content{
-    padding-right: 0 !important;
-    padding-left: 0 !important;
-    padding-top: 1rem !important;
-}
+// .content{
+//     padding-right: 0 !important;
+//     padding-left: 0 !important;
+//     padding-top: 1rem !important;
+// }
