--- a/src/app/modulos/dashboard/pages/instituciones/instituciones.component.html
+++ b/src/app/modulos/dashboard/pages/instituciones/instituciones.component.html
@@ -16,81 +16,27 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade active show" id="general" role="tabpanel" aria-labelledby="general-tab">
                     <div class="col-md-12">
+                        <input type="search" #searchInput (keyup)="search($event,searchInput.value)"
+                            placeholder="Buscar" class="form-control" name="" id="">
+                    </div>
+                    <div class="col-md-12">
                         <div class="row">
                             <div class="col-md-12 col-lg-12">
-                                <div class="card">
-                                    <div class="card-header">Instituciones</div>
-                                    <div class="card-body">
-                                        <p class="card-title"></p>
-                                        <div id="dataTables-instituciones_wrapper"
-                                            class="dataTables_wrapper dt-bootstrap4 no-footer">
-                                            <div class="row">
-                                                <div class="col-sm-12 col-md-6"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-sm-12">
-                                                    <button class="btn" (click)="InitData()"><i
-                                                            class="fas fa-undo"></i></button>
-                                                </div>
-                                                <div class="col-sm-12">
-                                                    <table class="table table-hover dataTable no-footer dtr-inline"
-                                                        id="dataTables-instituciones" width="100%" role="grid"
-                                                        aria-describedby="dataTables-instituciones_info"
-                                                        style="width: 100%;">
-                                                        <thead>
-                                                            <tr role="row">
-                                                                <th class="sorting" tabindex="0"
-                                                                    aria-controls="dataTables-instituciones" rowspan="1"
-                                                                    colspan="1" style="width: 84px;"
-                                                                    aria-label="ID: activate to sort column ascending">
-                                                                    ID</th>
-                                                                <th class="sorting_asc" tabindex="0"
-                                                                    aria-controls="dataTables-instituciones" rowspan="1"
-                                                                    colspan="1" style="width: 234px;"
-                                                                    aria-label="Name: activate to sort column descending"
-                                                                    aria-sort="ascending">Nombre</th>
-                                                                <th class="sorting" tabindex="0"
-                                                                    aria-controls="dataTables-instituciones" rowspan="1"
-                                                                    colspan="1" style="width: 157px;"
-                                                                    aria-label="Salary: activate to sort column ascending">
-                                                                    Siglas</th>
-                                                                <th class="sorting" tabindex="0"
-                                                                    aria-controls="dataTables-instituciones" rowspan="1"
-                                                                    colspan="1" style="width: 212px;"
-                                                                    aria-label="Country: activate to sort column ascending">
-                                                                    Fecha expiración</th>
-                                                                <th class="sorting" tabindex="0"
-                                                                    aria-controls="dataTables-instituciones" rowspan="1"
-                                                                    colspan="1" style="width: 351px;"
-                                                                    aria-label="City: activate to sort column ascending">
-                                                                    Fecha de registro</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            <tr role="row" class="odd"
-                                                                *ngFor="let inst of INSTITUCIONES">
-                                                                <td>{{inst.cveInstitucion}}</td>
-                                                                <td>{{inst.nombre}}</td>
-                                                                <td>{{inst.siglas}}</td>
-                                                                <td>{{inst.fechaExp}}</td>
-                                                                <td>{{inst.fechaRegistro}}</td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-sm-12 col-md-5">
-                                                    <div class="dataTables_info" id="dataTables-instituciones_info"
-                                                        role="status" aria-live="polite">Showing 1 to 10 of 10 entries
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-12 col-md-7">
-                                                </div>
-                                            </div>
+
+                                <div class="search-results" infinite-scroll [infiniteScrollDistance]="scrollDistance"
+                                    [infiniteScrollUpDistance]="scrollUpDistance" [infiniteScrollThrottle]="throttle"
+                                    (scrolled)="onScrollDown()">
+
+                                    <div *ngFor="let institucion of INSTITUCIONES" class="card">
+                                        <div class="card-body">
+                                            {{institucion.nombre}}
+                                        </div>
+                                        <div class="card-footer">
+                                            {{institucion.cveInstitucion}}
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
