--- a/src/app/modulos/estudiantes/estudiantes.component.html
+++ b/src/app/modulos/estudiantes/estudiantes.component.html
@@ -1,11 +1,7 @@
 <div class="wrapper bg-dark">
   <nav id="sidebar" class="bg-blue" [ngClass]="{'active': utilidadesS.innerWidth < 800}">
     <div class="sidebar-header">
-      <img
-        src="assets/img/logo con texto.png"
-        alt="bootraper logo"
-        class="app-logo"
-      />
+      <img src="assets/img/logo con texto.png" alt="bootraper logo" class="app-logo" />
     </div>
     <ul class="list-unstyled components text-secondary">
       <li>
@@ -15,11 +11,7 @@
   </nav>
   <div id="body" [ngClass]="{'active': utilidadesS.innerWidth < 800}">
     <nav class="navbar navbar-expand-lg navbar-white bg-dark">
-      <button
-        type="button"
-        id="sidebarCollapse"
-        class="btn default-secondary-menu text-white"
-      >
+      <button type="button" id="sidebarCollapse" class="btn default-secondary-menu text-white">
         <i class="fas fa-bars"></i><span></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -28,11 +20,12 @@
           <li *ngIf="authS.UserClass.IsAdmin" class="nav-item dropdown">
             <div class="nav-dropdown">
               <a href="" class="nav-item nav-link dropdown-toggle text-secondary" data-toggle="dropdown"><i
-                  class="fas fa-link mr-2"></i> <span>Enlaces rápidos</span> <i style="font-size: .8em;" class="fas fa-caret-down"></i></a>
+                  class="fas fa-link mr-2"></i> <span>Enlaces rápidos</span> <i style="font-size: .8em;"
+                  class="fas fa-caret-down"></i></a>
               <div class="dropdown-menu dropdown-menu-right nav-link-menu">
                 <ul class="nav-list">
                   <li *ngFor="let m of authS.UserClass.FormatedModules">
-                    <a [routerLink]="m.ruta" class="dropdown-item text-white"><i [ngClass]="m.icono"></i> {{m.nombre}}
+                    <a [routerLink]="m.ruta" class="dropdown-item text-gray"><i [ngClass]="m.icono"></i> {{m.nombre}}
                     </a>
                   </li>
                 </ul>
@@ -42,29 +35,22 @@
 
           <li class="nav-item dropdown">
             <div class="nav-dropdown">
-              <a
-                href=""
-                class="nav-item nav-link dropdown-toggle text-white"
-                data-toggle="dropdown"
-                ><i class="fas fa-user mr-2"></i>
+              <a href="" class="nav-item nav-link dropdown-toggle text-white" data-toggle="dropdown"><i
+                  class="fas fa-user mr-2"></i>
                 <span>{{
                   authS.UserClass.FormatedName
                 }}</span>
-                <i style="font-size: 0.8em" class="fas fa-caret-down"></i
-              ></a>
+                <i style="font-size: 0.8em" class="fas fa-caret-down"></i></a>
               <div class="dropdown-menu dropdown-menu-right nav-link-menu">
                 <ul class="nav-list">
                   <li>
-                    <a routerLink="profile" class="dropdown-item"
-                      ><i class="fas fa-address-card"></i> Perfil
+                    <a routerLink="profile" class="dropdown-item"><i class="fas fa-address-card"></i> Perfil
                     </a>
                   </li>
                   <div class="dropdown-divider"></div>
                   <li class="pointer">
-                    <a
-                      (click)="authS.DestroySessionInformation()"
-                      class="dropdown-item"
-                      ><i class="fas fa-sign-out-alt"></i> Salir
+                    <a (click)="authS.DestroySessionInformation()" class="dropdown-item"><i
+                        class="fas fa-sign-out-alt"></i> Salir
                     </a>
                   </li>
                 </ul>
