--- a/src/app/modulos/dashboard/pages/usuarios/steps/roles/roles.component.html
+++ b/src/app/modulos/dashboard/pages/usuarios/steps/roles/roles.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="page-title">
-        <h3>User Roles
-            <a class="btn btn-sm btn-outline-primary float-right"><i class="fas fa-plus-circle"></i> Add</a>
+        <h3 class="text-white">User Roles
+            <a class="btn btn-sm btn-outline-primary float-right text-white"><i class="fas fa-plus-circle"></i> Add</a>
             <a routerLink="dashboard/usuarios/all" class="btn btn-sm btn-outline-info float-right mr-1">
                 <i class="fas fa-angle-left"></i> <span class="btn-header">Return</span></a>
         </h3>
