--- a/src/app/modulos/dashboard/dashboard.component.html
+++ b/src/app/modulos/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <nav id="sidebar" class="">
     <div class="sidebar-header">
-      <img src="assets/img/bootstraper-logo.png" alt="bootraper logo" class="app-logo" />
+      <img src="assets/img/logo.png" width="50px" />
     </div>
     <ul class="list-unstyled components text-secondary">
       <li *ngFor="let route of htmlRoutes">
