--- a/src/app/modulos/dashboard/pages/usuarios/steps/all/all.component.html
+++ b/src/app/modulos/dashboard/pages/usuarios/steps/all/all.component.html
@@ -93,7 +93,7 @@
 
                 <div class="modal fade" id="modal-singleton" tabindex="-1" role="dialog"
                     aria-labelledby="modal-singletonLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
+                    <div class="modal-dialog modal-lg " role="document">
 
                         <div *ngIf="SELECTED_MODAL === 'roles'" class="modal-content">
                             <div class="modal-header">
@@ -119,8 +119,42 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-
+                                        <tr *ngFor="let rol of ROLES">
+                                            <td>{{rol.rol.nombre}}</td>
+                                            <td *ngIf="rol.activo"><i class="fa fa-toggle-on"></i></td>
+                                            <td *ngIf="rol.activo==false"><i class="fa fa-toggle-off"></i></td>
+                                            <td>
+                                                <div class="dropdown">
+                                                    <button class="btn btn-secondary dropdown-toggle" type="button"
+                                                        id="dropdownMenuButton" data-toggle="dropdown"
+                                                        aria-haspopup="true" aria-expanded="false">
+                                                        <i class="fa fa-sliders-h"></i>
+                                                    </button>
+                                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                        <span *ngIf="rol.activo" (click)="toggleRole(rol.rol.cveRol)"
+                                                            class="dropdown-item pointer"> <i class="fa fa-edit"></i>
+                                                            Desactivar </span>
+                                                        <span *ngIf="rol.activo===false"
+                                                            (click)="toggleRole(rol.rol.cveRol)"
+                                                            class="dropdown-item pointer"> <i class="fa fa-edit"></i>
+                                                            Activar </span>
+                                                        <span (click)="deleteRole(rol.rol.cveRol)"
+                                                            class="dropdown-item text-danger pointer"> <i
+                                                                class="fa fa-trash"></i>
+                                                            Borrar</span>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
                                     </tbody>
+                                    <div>
+                                        <label for="exampleSelect1" class="bmd-label-floating">Agregar rol</label>
+                                        <select #selectRol (change)="addRole(+selectRol.value)" class="form-control"
+                                            id="exampleSelect1">
+                                            <option *ngFor="let rol of ROLES_CATALOG" [value]="rol.cveRol">
+                                                {{rol.nombre}}</option>
+                                        </select>
+                                    </div>
                                 </table>
                             </div>
                             <div class="modal-footer">
@@ -155,12 +189,28 @@
                                                 Genero
                                             </th>
                                             <th scope="col">
-                                                Imagen
+                                                Activo
                                             </th>
                                         </tr>
                                     </thead>
                                     <tbody>
-
+                                        <tr>
+                                            <td>{{PERSONAL_DATA.nombre}}</td>
+                                            <td>{{PERSONAL_DATA.apellidoPaterno}}</td>
+                                            <td>{{PERSONAL_DATA.apellidoMaterno}}</td>
+                                            <td>{{PERSONAL_DATA.fechaNacimiento}}</td>
+                                            <td *ngIf="PERSONAL_DATA.genero" class="text-primary"><i
+                                                    class="fa fa-male"></i></td>
+                                            <td *ngIf="PERSONAL_DATA.genero==false" class="text-danger"><i
+                                                    class="fa fa-female"></i></td>
+                                            <td *ngIf="PERSONAL_DATA.genero==null" class="text-secondary"><i
+                                                    class="fa fa-transgender"></i>
+                                            </td>
+                                            <td *ngIf="PERSONAL_DATA.activo" class="text-primary"><i
+                                                    class="fa fa-toggle-on"></i></td>
+                                            <td *ngIf="PERSONAL_DATA.activo==false"><i class="fa fa-toggle-off"></i>
+                                            </td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -182,17 +232,28 @@
                                         <label class="custom-control-label" for="switch2">Solo desactivar cuenta</label>
                                     </div>
                                     <div class="form-group">
+
                                         <div class="alert alert-danger" role="alert">Esta acción es irreversible por lo
-                                            que para seguir necesitarás escribir lo siguiente para confirmar <b>nombre
-                                                de usuario</b></div>
-                                        <input type="text" class="form-control" id="recipient-name">
+                                            que para seguir necesitarás escribir lo siguiente para confirmar
+                                            <b>{{SELECTED_USER_TO_ERASE.usuario}}</b></div>
+                                        <input #confirmacion type="text" class="form-control" id="recipient-name">
+                                        <div class="mt-5" *ngIf="confirmacion.value === SELECTED_USER_TO_ERASE.usuario">
+                                            <div class="alert alert-warning mb-4" role="alert">
+                                                El proceso puede tardar unos minutos, esto se debe a que se borrará toda
+                                                la
+                                                información relacionada con el usuario en el sistema.
+                                            </div>
+                                            <button (click)="deleteUser()" class="btn btn-outline-danger btn-block">
+                                                Borrar usuario
+                                            </button>
+                                        </div>
                                     </div>
 
 
                                 </form>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                             </div>
                         </div>
 
